# umfive

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build-and-deploy-wheels-on-pypi.yml  pytest.yml
doc/benchmarking/: n512_comparison_v1.py  n512_comparison_v3.py  n512_ppview.py  plot_cf_p5_boxplots.py  plot_ppview_perf.py  pp5_remote_test.py
doc/examples/: n512_example.py
ppfive/: __init__.py  constants.py  dataset.py  file.py  high_level.py  inspect.py  lookup_header.py  ppdump.py  stash.py  stash_table.py  umread.py  variable.py  wgdos.py
ppfive/core/: __init__.py  constants.py  data.py  extra_data.py  filetype.py  header.py  interpret.py  models.py  references.py  scanner.py  variables.py
ppfive/io/: __init__.py  base.py  bytereader.py  chunk_read.py  fileobj.py  fsspec_reader.py  local.py  local_posix_reader.py  mock_filesystem.py
tests/data/: aaaaoa.pmh8dec.pp  cl_umfile_dump.txt  extra_data.pp  extra_data_dump.txt  test2.pp  test2_dump.txt  umfile.pp  umfile_dump.txt  wgdos_packed.pp  wgdos_packed_dump.txt
tests/tests_core/: test_DataVariable_api.py  test_File_api.py  test_data_loading.py  test_file_api.py  test_filetype.py  test_packed_data_loading.py  test_pyfive_interoperability.py  test_pyfive_quack_contract.py  test_scanner.py  test_stash_table.py  test_wgdos_extension.py
tests/tests_io/: test_cf_python_registration_bridge.py  test_chunk_index.py  test_file.py  test_fileobj_reader.py  test_fsspec_reader.py  test_lazy_subselection.py  test_local_reader.py  test_parallel_reads.py  test_ppdump.py  test_real_um_files.py  test_reference_index.py  test_um_metadata_attrs.py  test_umdump.py
umfive/: constants.py  high_level.py  inspect.py  stash.py  umdump.py  wgdos.py
umfive/c_ext/: wgdos_impl.h  wgdos_module.c
umfive/core/: interpret.py
umfive/data/: STASH_to_CF.txt  field_codes.txt
