[build-system]
requires = [
  "setuptools>=80",
  "setuptools_scm>=8",
  "numpy>=1.24",
]

# This file is currently used only to configure the black Python code
# formatter, rather than provide project metadata (see
# https://www.python.org/dev/peps/pep-0621/) which can be found instead
# in the setup.py file.

# To run the black checker with this configuration, execute 'black .' in the
# root of this repository. See https://black.readthedocs.io/en/stable/ for
# the 'black' documentation.
[tool.black]
line-length = 79

# Set for compatibility of 'black' and 'isort' auto-formatting tools
[tool.isort]
profile = "black"
# ... and since we set this against the black default line length:
line_length=79
# Prevent isort from auto-formatting '__init__.py' file imports because
# they require a specific non-aphabetical (etc.) ordering else they will
# cause errors due to bad or circular importing across the modules.
extend_skip_glob = [
  "**/__init__.py",
]

[project]
name = "ppfive"
version = "0.1.1"
description = "PP/Fields reader with pyfive-style high-level API"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{name = "David Hassell"},
	{name = "Alan Iwi"},
	{name = "Bryan Lawrence"},
  {name = "Valeriu Predoi - package"},
]
dependencies = [
        "cftime",
	"numpy>=1.24",
	"pyfive>=1.1.2",
]

[project.optional-dependencies]
io = ["fsspec>=2024.3.0"]
test = [
	"pytest>=8",
	"pytest-cov>=5",
        "pytest-xdist",
]

# Prevent message about missing docstring in magic method
[tool.pydocstyle]
ignore = "D105"