[build-system]
requires = [
  "setuptools>=80",
  "setuptools_scm>=8",
  "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[project]
name = "umfive"
version = "0.2.2"
description = "PP/Fields reader with pyfive-style high-level API"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{name = "David Hassell"},
	{name = "Alan Iwi"},
	{name = "Bryan Lawrence"},
        {name = "Valeriu Predoi - package"},
]
dependencies = [
	"cftime",
	"numpy>=1.24",
	"pyfive>=1.1.2",
]

[project.optional-dependencies]
io = ["fsspec>=2024.3.0"]
test = [
	"pytest>=8",
	"pytest-cov>=5",
        "pytest-xdist",
]

[project.scripts]
ppdump = "umfive.umdump:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["umfive*"]

[tool.setuptools.package-data]
umfive = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
# ... and since we set this against the black default line length:
line_length=79
# Prevent isort from auto-formatting '__init__.py' file imports because
# they require a specific non-aphabetical (etc.) ordering else they will
# cause errors due to bad or circular importing across the modules.
extend_skip_glob = [
  "**/__init__.py",
]

[tool.black]
line-length = 79
